[gd_scene load_steps=3 format=3 uid="uid://kxs2ne0wk5lf"]

[ext_resource type="Script" path="res://Levels/Menus/UI/audio_slider.gd" id="1_22ql0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_80avw"]

[node name="AudioSlider" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_22ql0")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2
alignment = 1

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 100
theme_override_styles/separator = SubResource("StyleBoxEmpty_80avw")

[node name="AudioType" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
text = "Volume"
vertical_alignment = 1

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 100

[node name="HSlider" type="HSlider" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
max_value = 1.0
step = 0.001

[node name="VSeparator3" type="VSeparator" parent="HBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 100

[node name="AudioValue" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
text = "75.5"
vertical_alignment = 1
